--- a/templates/register.html
+++ b/templates/register.html
@@ -16,8 +16,8 @@
                         <label>Password</label>
                     </div>
 
-                    <div class="">
-                        <label>Role</label>
+                    <div class="register_box">
+                        <label class="register">Role</label>
                         <select name="role" required="">
                             <option value="instructor">Instructor</option>
                             <option value="student">Student</option>
