--- a/templates/create_course.html
+++ b/templates/create_course.html
@@ -2,14 +2,12 @@
 
 {% block content %}
     <link rel="stylesheet" href="{{ url_for('static', filename='create_course_style.css') }}">
-    <div class="create_course">
-        <h1>Create Course</h1>
-        <form method="post">
-            <div class="course-box">
-                <input type="text" name="course_name" required="">
-                <label>Course Name</label>
-            </div><center>
-            <button type="submit">Create Course</button></center>
-        </form>
-    </div>
+    <h1>Create Course</h1>
+    <form method="post">
+        <div>
+            <label for="name">Course Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <button type="submit">Create Course</button>
+    </form>
 {% endblock %}
