--- a/static/dashboard_style.css
+++ b/static/dashboard_style.css
@@ -18,9 +18,8 @@
     color: white;
 }
 
-li {
-    display: inline;
-    /* margin-right: 20px; */
+option {
+    padding-top: 5%;
 }
 
 .front_text {
@@ -115,7 +114,9 @@ li {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 170px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
