--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,3 @@
-
-
 {% extends 'base.html' %}
 
 {% block content %}
@@ -7,39 +5,44 @@
     <div class="dashboard">
         <h1 class="welcome">Dashboard</h1>
         <nav class="nav">
-            <div class="dropdown">
-                <button class="dropbtn button">Your Courses</button>
-                <div class="dropdown-content">
-                    {% for course in courses %}
-                        <li>
+
+            {% if user.role == 'instructor' %} 
+                <div class="dropdown">
+                    <button class="dropbtn button my_courses">Your Courses</button>
+                    <div class="dropdown-content">
+                        {% for course in courses %}
                             <a href="{{ url_for('course_detail', course_id=course.id) }}">{{ course.name }}</a>
-                        </li>
-                    {% endfor %}
+                        {% endfor %}
+                        <a href="{{ url_for('my_courses') }}">View All Courses</a>
+                    </div>
                 </div>
-              </div>
+            {% endif %}
 
-            <div class="dropdown">
-                <button class="dropbtn button">Available Courses</button>
-                <div class="dropdown-content">
-                    {% for course in all_courses %}
-                        {% if course not in courses %}
-                            <option value="{{ course.id }}">{{ course.name }}</option>
-                        {% endif %}
-                    {% endfor %}
+            {% if user.role == 'student' %}
+                <div class="dropdown">
+                    <button class="dropbtn button my_courses">Your Courses</button>
+                    <div class="dropdown-content">
+                        {% for course in courses %}
+                            <a href="{{ url_for('course_detail', course_id=course.id) }}">{{ course.name }}</a>
+                        {% endfor %}
+                        <a href="{{ url_for('my_courses') }}">View All Courses</a>
+                    </div>
                 </div>
-              </div>
+            {% endif %}
 
-            <!-- <h2 class="title">Available Courses</h2>
-            <form method="post" action="{{ url_for('enroll', course_id=0) }}" id="enroll-form">
-                <select id="available_courses" name="course_id">
-                    {% for course in all_courses %}
-                        {% if course not in courses %}
-                            <option value="{{ course.id }}">{{ course.name }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-                <button type="submit" class="enroll button">Enroll</button>
-            </form> -->
+            {% if user.role == 'student' %}
+                <div class="dropdown">
+                    <button class="dropbtn button available">Available Courses</button>
+                    <div class="dropdown-content">
+                        {% for course in all_courses %}
+                            {% if course not in courses %}
+                                <a href="{{ url_for('course_detail', course_id=course.id) }}">{{ course.name }}</a>          
+                            {% endif %}
+                        {% endfor %}
+                        <a href="{{ url_for('available_courses') }}">View All Courses</a>
+                    </div>
+                </div>
+            {% endif %}
 
             {% if user.role == 'instructor' %}
                 <button class="create_course_button">
@@ -56,10 +59,12 @@
             window.location.href = "{{ url_for('create_course') }}";
         });
 
-        document.getElementById('enroll-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const courseId = document.getElementById('available_courses').value;
-            window.location.href = "{{ url_for('enroll', course_id=0) }}".replace('0', courseId);
+        document.querySelector('.available').addEventListener('click', function() {
+            window.location.href = "{{ url_for('available_courses') }}";
+        });
+
+        document.querySelector('.my_courses').addEventListener('click', function() {
+            window.location.href = "{{ url_for('my_courses') }}";
         });
     </script>
     
