--- a/templates/course_detail.html
+++ b/templates/course_detail.html
@@ -4,56 +4,52 @@
     <h1>{{ course.name }}</h1>
     <p>Instructor: {{ course.instructor.username }}</p>
 
-        <p>Students:</p>
-        <ol>
-            {% for student in course.students %}
-                <li>{{ student.username }}</li>
-            {% endfor %}
-        </ol>
+    <p>Students:</p>
+    <ol>
+        {% for student in course.students %}
+            <li>{{ student.username }}</li>
+        {% endfor %}
+    </ol>
 
-        <form method="POST" action="{{ url_for('enroll', course_id=course.id) }}">
-            <button type="submit">Enroll in this course</button>
-        </form>
-
-    <form method="POST" action="{{ url_for('create_question', course_id=course_id) }}">
-        <label for="text">Question:</label><br>
-        <input type="text" id="text" name="text"><br>
-        <label for="answers">Answers:</label><br>
-        A: <input type="text" id="answerA" name="answerA"><br>
-        B: <input type="text" id="answerB" name="answerB"><br>
-        C: <input type="text" id="answerC" name="answerC"><br>
-        D: <input type="text" id="answerD" name="answerD"><br>
-        <label for="correct_answer">Correct Answer:</label><br>
-        <select id="correct_answer" name="correct_answer">
-            <option value="A">A</option>
-            <option value="B">B</option>
-            <option value="C">C</option>
-            <option value="D">D</option>
-        </select><br>
-        <input type="submit" value="Create Question">
-    </form>
-
+    {% if user in course.students %}
         <div id="questionContainer">
             <h3>Current Question:</h3>
             {% if question %}
                 <p>{{ question.text }}</p>
+                <div id="answerContainer">
+                    <form action="{{ url_for('submit_answer', course_id=course_id, question_id=question.id) }}" method="post">
+                        {% for answer in question.answers %}
+                            <input type="radio" id="answer{{ loop.index }}" name="answer" value="{{ answer.id }}">
+                            <label for="answer{{ loop.index }}">{{ answer.text }}</label><br>
+                        {% endfor %}
+                        <input type="submit" value="Submit Answer">
+                    </form>
+                </div>
             {% else %}
                 <p>No active question at the moment.</p>
             {% endif %}
         </div>
-    
-        <div id="answerContainer">
-            {% if question %}
-                <form action="{{ url_for('submit_answer', course_id=course_id, question_id=question.id) }}" method="post">
-                    {% for answer in question.answers %}
-                        <input type="radio" id="answer{{ loop.index }}" name="answer" value="{{ answer.id }}">
-                        <label for="answer{{ loop.index }}">{{ answer.text }}</label><br>
-                    {% endfor %}
-                </form>
-            {% else %}
-                <p>Answer options will appear here when a question is active.</p>
-            {% endif %}
-        </div>
-
+    {% elif user.id == course.instructor_id %}
+        <form method="POST" action="{{ url_for('create_question', course_id=course_id) }}">
+            <label for="text">Question:</label><br>
+            <input type="text" id="text" name="text"><br>
+            <label for="answers">Answers:</label><br>
+            A: <input type="text" id="answerA" name="answerA"><br>
+            B: <input type="text" id="answerB" name="answerB"><br>
+            C: <input type="text" id="answerC" name="answerC"><br>
+            D: <input type="text" id="answerD" name="answerD"><br>
+            <label for="correct_answer">Correct Answer:</label><br>
+            <select id="correct_answer" name="correct_answer">
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="C">C</option>
+                <option value="D">D</option>
+            </select><br>
+            <input type="submit" value="Create Question">
+        </form>
+    {% else %}
+        <form method="POST" action="{{ url_for('enroll', course_id=course.id) }}">
+            <button type="submit">Enroll in this course</button>
+        </form>
+    {% endif %}
 {% endblock %}
-
