--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -37,7 +37,7 @@
                 </div>
             </div>            
 
-            <a href="{{ url_for('my_grades') }}"><button class="dropbtn button">My Grades</button></a>
+            <!-- <a href="{{ url_for('my_grades') }}"><button class="dropbtn button">My Grades</button></a> -->
 
             <button class="create_course_button">
                 <span class="shadow"></span>
