--- a/templates/available_courses.html
+++ b/templates/available_courses.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='available_courses_style.css') }}">
-    <h1>Available Courses</h1>
-    <ul>
-        {% for course in all_courses %}
-            {% if course not in enrolled_courses %}
-                <li>
-                    <a href="{{ url_for('course_detail', course_id=course.id) }}">{{ course.name }}</a>
-                </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
+    <link rel="stylesheet" href="{{ url_for('static', filename='courses_style.css') }}">
+    <div class="title_box">
+        <h1 class="title">Available Courses</h1>
+    </div>
+
+    <div class="courses_box">
+        <ul>
+            {% for course in all_courses %}
+                {% if course not in enrolled_courses %}
+                    <li class="courses">
+                        <a href="{{ url_for('course_detail', course_id=course.id) }}">{{ course.name }}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
