--- a/templates/my_courses.html
+++ b/templates/my_courses.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='available_courses_style.css') }}">
-    <h1>My Courses</h1>
-    <ol>
-        {% for course in courses %}
-            <li>
-                <a href="{{ url_for('course_detail', course_id=course.id) }}">{{ course.name }}</a>
-            </li>
-        
-        {% endfor %}
-    </ol>
+    <link rel="stylesheet" href="{{ url_for('static', filename='courses_style.css') }}">
+    <div class="title_box">
+        <h1 class="title">My Courses</h1>
+    </div>
+    
+    <div class="courses_box">
+        <ol>
+            {% for course in courses %}
+                <li class="courses">
+                    <a href="{{ url_for('course_detail', course_id=course.id) }}"><button>{{ course.name }}</button></a>
+                </li>
+            {% endfor %}
+        </ol>
+    </div>
 {% endblock %}
